# api-gtw-test

./: .gitignore  Варианты.md
auth_app/: app.py  pyproject.toml
nginx/: nginx.conf  readme.md
spring-cloud-plugin/: readme.md
traefik/: readme.md  traefik.yml
traefik/dyncofigs/: hhapi.yml
