[tool.poetry]
name = "auth-app"
version = "0.1.0"
description = ""
authors = ["Evgeny Bokshitsky <e.bokshitskiy@hh.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
